old_tests/tests/lean/inaccessible2.lean.expected.out
inaccessible2.lean:5:8: error: invalid occurrence of 'inaccessible' annotation, it must only occur in patterns
inaccessible2.lean:8:10: error: invalid pattern, must be an application, constant, variable, type ascription, aliasing pattern or inaccessible term
inaccessible2.lean:8:45: error: unknown identifier 'a'
inaccessible2.lean:7:11: error: equation compiler failed (use 'set_option trace.eqn_compiler.elim_match true' for additional details)
inaccessible2.lean:11:39: error: inaccesible pattern notation `.(t)` can only be used in patterns
inaccessible2.lean:11:46: error: invalid expression
inaccessible2.lean:11:4: error: invalid application, function expected
inaccessible2.lean:11:46: error: ill-formed match/equation expression
inaccessible2.lean:11:46: error: command expected
inaccessible2.lean:14:21: error: don't know how to synthesize placeholder
context:
A : Sort ?,
sym : ∀ (a b : A), a = b → b = a
⊢ A
inaccessible2.lean:13:11: error: equation compiler failed to create auxiliary declaration 'sym._main'
nested exception message:
type mismatch at application
  eq.rec (λ (a_1 : a = a) (H_2 : a_1 == eq.refl a), id_rhs (⁇ = ⁇) rfl)
term
  λ (a_1 : a = a) (H_2 : a_1 == eq.refl a), id_rhs (⁇ = ⁇) rfl
has type
  ∀ (a_1 : a = a), a_1 == _ → ⁇ = ⁇
but is expected to have type
  (λ (b : A), ∀ (a_1 : a = b), a_1 == _ → b = a) a
